1/31/2008
	- When converting messages to wire format, don't include name
	  compression pointers greater than 2^14 - 1.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

1/24/2008
	- 2.0.6 released

1/22/2008
	- Fix an off-by-2 error that could cause an infinite loop when
	  parsing a Name with a self-referential compression pointer.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

	- Raise an exception when an invalid label type is seen in a wire
	  format name.  The previous behavior would incorrectly parse invalid
	  names, and could lead to infinite loops.
	  (reported by Carole Gill <cgill@silverspringnet.com>)

8/28/2007
	- 2.0.5 released
	- Add the ZoneTransferIn.setLocalAddress() method.  (based on a patch
	  from <mpugge@users.sourceforge.net>)
	- Build jar file with -source and -target options to provide
	  compatibility with older Java releases (that is, revert to
	  pre-2.0.4 behavior).
	  (reported by Stefano Bagnara <apache@bago.org>)

8/26/2007
	- 2.0.4 released
	- Update SPI code to work with java 6.
	- Fix an argument parsing bug in the dig program, where failure to
	  specify both type and class would cause the specified server to
	  be ignored.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

6/12/2007
	- The SPFRecord constructors incorrectly created records whose
	  internal type field was TXT, not SPF.
	  (reported by Stefano Bagnara <bago75@users.sourceforge.net>)

3/7/2007
	- Message.getQuestion() incorrectly handled the case where the
	  question section was represented by an empty list.
	  (reported by Karl Auer <kauer@biplane.com.au>)

2/15/2007
	- Properly obey timeouts in TCPClient code when the message is
	  read in multiple chunks. (based on a patch from
	  Francesco Vivoli <fvivoli@ripe.net>)

12/4/2006
	- A cache lookup for a record would incorrectly return a delegation
	  when records for both the queried type and NS were present.
	  (reported by yosukear <y_arimoto_acare@users.sourceforge.net>)
